--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -28,4 +28,5 @@ $purpleDark: #8E44AD;
 
 $titleFontStack: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
 $bodyFontStack: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
+$codeFontStack: Menlo,Monaco,Consolas,"Courier New",monospace;
 $baseline: 6px;
