--- a/css/main.css
+++ b/css/main.css
@@ -399,14 +399,32 @@
 
 /* This CSS resource incorporates links to font software which is the valuable copyrighted property of Monotype Imaging and/or its suppliers. You may not attempt to copy, install, redistribute, convert, modify or reverse engineer this font software. Please contact Monotype Imaging with any questions regarding Web Fonts:  http://webfonts.fonts.com */
 /* line 1, _styleguide.scss */
-.swatch {
-  height: 200px;
-  width: 200px;
+#color .swatch {
   padding: 10px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  background-color: #95a5a6;
+  margin-right: 10px;
+  margin-bottom: 10px;
   display: inline-block;
+  width: inherit;
+  color: inherit;
+}
+
+/* line 10, _styleguide.scss */
+#color .unit {
+  text-align: center;
+}
+
+/* line 14, _styleguide.scss */
+#grid .line {
+  background-color: #d2f2fc;
+  margin-bottom: .75em;
+}
+
+/* line 19, _styleguide.scss */
+#grid .unit p {
+  margin-top: .75em;
+  background-color: #74d8f4;
+  padding: .75em;
+  text-align: center;
 }
 
 /* line 3, main.scss */
@@ -438,8 +456,8 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 /* line 27, main.scss */
 .section {
   border-top: 2px solid #ecf0f1;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 1.25em;
+  padding-bottom: 1.25em;
 }
 
 /* line 33, main.scss */
@@ -451,7 +469,7 @@ body {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   text-rendering: optimizeLegibility;
   vertical-align: baseline;
-  color: #34495E;
+  color: #34495e;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   line-height: 0.375em;
@@ -459,7 +477,137 @@ body {
   height: inherit;
 }
 
-/* line 49, main.scss */
+/* line 52, main.scss */
+line {
+  zoom: 1;
+}
+
+/* line 56, main.scss */
+.line:before, .line:after {
+  content: " ";
+  display: table;
+}
+
+/* line 61, main.scss */
+.line:after {
+  clear: both;
+}
+
+/* line 65, main.scss */
+.lastUnit {
+  overflow: hidden;
+  -moz-background-clip: padding-box !important;
+  -webkit-background-clip: padding-box !important;
+  background-clip: padding-box !important;
+  float: left;
+  float: none;
+  width: auto;
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+}
+
+/* line 77, main.scss */
+.unit {
+  overflow: hidden;
+  -moz-background-clip: padding-box !important;
+  -webkit-background-clip: padding-box !important;
+  background-clip: padding-box !important;
+  float: left;
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+}
+
+/* line 87, main.scss */
+.size8of8 {
+  width: 100%;
+}
+
+/* line 91, main.scss */
+.size7of8 {
+  width: 87.5%;
+}
+
+/* line 95, main.scss */
+.size6of8 {
+  width: 75%;
+}
+
+/* line 99, main.scss */
+.size5of8 {
+  width: 62.5%;
+}
+
+/* line 103, main.scss */
+.size4of8 {
+  width: 50%;
+}
+
+/* line 107, main.scss */
+.size3of8 {
+  width: 37.5%;
+}
+
+/* line 111, main.scss */
+.size2of8 {
+  width: 25%;
+}
+
+/* line 115, main.scss */
+.size1of8 {
+  width: 12.5%;
+}
+
+/* line 119, main.scss */
+.size4of4 {
+  width: 100%;
+}
+
+/* line 123, main.scss */
+.size3of4 {
+  width: 75%;
+}
+
+/* line 127, main.scss */
+.size2of4 {
+  width: 50%;
+}
+
+/* line 131, main.scss */
+.size1of4 {
+  width: 25%;
+}
+
+/* line 135, main.scss */
+.size2of2 {
+  width: 100%;
+}
+
+/* line 139, main.scss */
+.size1of2 {
+  width: 50%;
+}
+
+/* line 143, main.scss */
+.size3of3 {
+  width: 100%;
+}
+
+/* line 147, main.scss */
+.size2of3 {
+  width: 66.66666666666666%;
+}
+
+/* line 151, main.scss */
+.size1of3 {
+  width: 33.33333333333333%;
+}
+
+/* line 155, main.scss */
+.size1of1 {
+  width: 100%;
+}
+
+/* line 170, main.scss */
 .h0 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   color: #15bded;
@@ -469,7 +617,7 @@ body {
   margin-bottom: 0.47916666666667em;
 }
 
-/* line 58, main.scss */
+/* line 179, main.scss */
 h1, .h1 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   color: #15bded;
@@ -478,16 +626,16 @@ h1, .h1 {
   margin-bottom: 0.5em;
 }
 
-/* line 66, main.scss */
+/* line 187, main.scss */
 h2, .h2 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
-  color: #7F8C8D;
+  color: #7f8c8d;
   font-size: 2.25em;
   line-height: 1.3333333333em;
   margin-bottom: 0.33333333333333em;
 }
 
-/* line 74, main.scss */
+/* line 195, main.scss */
 h3, .h3 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.5em;
@@ -496,7 +644,7 @@ h3, .h3 {
   margin-bottom: 0.58333333333333em;
 }
 
-/* line 82, main.scss */
+/* line 203, main.scss */
 h4, .h4, h5, h6 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.125em;
@@ -504,16 +652,16 @@ h4, .h4, h5, h6 {
   margin-bottom: 1em;
 }
 
-/* line 89, main.scss */
+/* line 210, main.scss */
 .xlarge {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.625em;
   line-height: 1.38461538461538em;
-  padding-top: 0.5625em;
+  padding-top: 0.15em;
   margin-bottom: 0.34615384615385em;
 }
 
-/* line 97, main.scss */
+/* line 218, main.scss */
 .large {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.25em;
@@ -522,7 +670,7 @@ h4, .h4, h5, h6 {
   margin-bottom: 0.5em;
 }
 
-/* line 105, main.scss */
+/* line 226, main.scss */
 .normal {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1em;
@@ -532,39 +680,111 @@ h4, .h4, h5, h6 {
   font-weight: normal;
 }
 
-/* line 114, main.scss */
+/* line 235, main.scss */
 p {
   font-size: 1em;
   line-height: 1.5em;
   margin-bottom: 0.75em;
 }
 
-/* line 120, main.scss */
+/* line 241, main.scss */
 a, a:visited {
   color: #15bded;
   text-decoration: none;
 }
 
-/* line 125, main.scss */
+/* line 246, main.scss */
 a:not(.img), a:visited:not(.img) {
   border-bottom: 2px solid;
   color: #15bded;
 }
 
-/* line 130, main.scss */
+/* line 251, main.scss */
 a:hover, a:visited:hover {
   color: #0b7391;
 }
 
-/* line 135, main.scss */
+/* line 256, main.scss */
 a.anchor {
   display: block;
   position: relative;
-  top: -120px;
+  top: -7.5em;
   visibility: hidden;
 }
 
-/* line 142, main.scss */
+/* line 263, main.scss */
+code, kbd, pre, samp {
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  padding: 0.125em 0.25em;
+  font-size: 90%;
+  color: #c0392b;
+  background-color: #fbf0ef;
+  white-space: nowrap;
+  border-radius: 4px;
+}
+
+/* line 275, main.scss */
+textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
+  display: inline-block;
+  padding: 0 0.625em;
+  border-radius: 0.3125em;
+  min-width: 3.75em;
+  max-width: 37.5em;
+  width: 100%;
+  min-height: 2.25em;
+  background-color: white;
+  border: 2px solid #95a5a6;
+}
+
+/* line 287, main.scss */
+textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus {
+  border: 2px solid #15bded;
+  outline: none;
+}
+
+/* line 293, main.scss */
+input::-webkit-input-placeholder {
+  color: #bdc3c7;
+}
+
+/* line 296, main.scss */
+input::-moz-placeholder {
+  color: #bdc3c7;
+}
+
+/* line 299, main.scss */
+input:-moz-placeholder {
+  /* Older versions of Firefox */
+  color: #bdc3c7;
+}
+
+/* line 302, main.scss */
+input:-ms-input-placeholder {
+  color: #bdc3c7;
+}
+
+/* line 306, main.scss */
+textarea::-webkit-input-placeholder {
+  color: #bdc3c7;
+}
+
+/* line 309, main.scss */
+textarea::-moz-placeholder {
+  color: #bdc3c7;
+}
+
+/* line 312, main.scss */
+textarea:-moz-placeholder {
+  /* Older versions of Firefox */
+  color: #bdc3c7;
+}
+
+/* line 315, main.scss */
+textarea:-ms-input-placeholder {
+  color: #bdc3c7;
+}
+
+/* line 319, main.scss */
 #wrap {
   background-color: white;
   margin-left: 11.25em;
@@ -574,14 +794,14 @@ a.anchor {
   position: relative;
 }
 
-/* line 151, main.scss */
+/* line 328, main.scss */
 #content {
   background-color: white;
   padding: 3em 2.5em;
   margin-top: 3.75em;
 }
 
-/* line 158, main.scss */
+/* line 335, main.scss */
 #mainNav {
   position: fixed;
   top: 0;
@@ -593,13 +813,13 @@ a.anchor {
   z-index: 200;
   transition: all .2s ease-in-out;
 }
-/* line 168, main.scss */
+/* line 345, main.scss */
 #mainNav .logo {
   width: 11.25em;
   height: 100%;
   display: inline-block;
 }
-/* line 173, main.scss */
+/* line 350, main.scss */
 #mainNav .logo img {
   position: relative;
   top: .5em;
@@ -607,83 +827,83 @@ a.anchor {
   padding-top: 0.5625em;
   height: 2.25em;
 }
-/* line 182, main.scss */
+/* line 359, main.scss */
 #mainNav .search {
   margin-left: 2.5em;
   position: relative;
 }
-/* line 186, main.scss */
+/* line 363, main.scss */
 #mainNav .search input {
   width: 30%;
   min-width: 22.5em;
   border: 2px solid #a3e5f8;
 }
-/* line 192, main.scss */
+/* line 369, main.scss */
 #mainNav .search input:focus {
   border: 2px solid #0f99c0;
 }
-/* line 196, main.scss */
+/* line 373, main.scss */
 #mainNav .search .inputLink {
   position: absolute;
   right: 2.5em;
   border: none;
   color: #34495e;
 }
-/* line 203, main.scss */
+/* line 380, main.scss */
 #mainNav .search .icon {
   position: absolute;
   right: 0.625em;
 }
-/* line 208, main.scss */
+/* line 385, main.scss */
 #mainNav .search .inputLink, #mainNav .search .icon {
   line-height: 3.75em;
 }
-/* line 212, main.scss */
+/* line 389, main.scss */
 #mainNav .search .inputLink:hover, #mainNav .search .icon:hover {
   opacity: .5;
 }
-/* line 217, main.scss */
+/* line 394, main.scss */
 #mainNav ul {
   display: inline-block;
   float: right;
   margin-right: 2.5em;
 }
-/* line 222, main.scss */
+/* line 399, main.scss */
 #mainNav ul .icon {
   font-size: 0.2em;
   position: relative;
   margin-left: 0.625em;
   bottom: 2px;
 }
-/* line 229, main.scss */
+/* line 406, main.scss */
 #mainNav ul li {
   display: inline-block;
   line-height: 3.75em;
   color: #34495e;
 }
-/* line 235, main.scss */
+/* line 412, main.scss */
 #mainNav ul li a {
   border: none;
   font-weight: bold;
   color: inherit;
   padding: 0 1.25em;
 }
-/* line 243, main.scss */
+/* line 420, main.scss */
 #mainNav ul li:hover {
   background-color: #74d8f4;
 }
 
-/* line 252, main.scss */
+/* line 429, main.scss */
 #mainNav.slideUp {
-  top: -60px;
+  top: -3.75em;
 }
 
-/* line 256, main.scss */
+/* line 433, main.scss */
 #mainNav.slideDown {
   top: 0;
 }
 
-/* line 260, main.scss */
+/* line 437, main.scss */
 #sideNav {
   overflow-y: auto;
   background-color: #ecf0f1;
@@ -692,98 +912,37 @@ a.anchor {
   top: 0;
   left: 0;
   width: 11.25em;
-  padding-top: 60px;
+  padding-top: 3.75em;
   z-index: 100;
 }
-/* line 271, main.scss */
+/* line 448, main.scss */
 #sideNav li {
   font-size: 1em;
   line-height: 3.75em;
   color: #95a5a6;
 }
-/* line 276, main.scss */
+/* line 453, main.scss */
 #sideNav li a {
   padding: 0 1.25em;
   border: none;
   font-weight: bold;
   color: inherit;
 }
-/* line 284, main.scss */
+/* line 461, main.scss */
 #sideNav li.selected {
   color: #34495e;
 }
-/* line 288, main.scss */
+/* line 465, main.scss */
 #sideNav li:hover {
   background-color: rgba(189, 195, 199, 0.3);
   color: #34495e;
 }
-/* line 293, main.scss */
+/* line 470, main.scss */
 #sideNav .icon {
   color: inherit;
   padding-left: 1.25em;
 }
-/* line 298, main.scss */
+/* line 475, main.scss */
 #sideNav .icon + a {
   padding-left: 0.625em;
-}
-
-/* line 303, main.scss */
-textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
-  display: inline-block;
-  padding: 0 0.625em;
-  border-radius: 0.3125em;
-  min-width: 3.75em;
-  max-width: 37.5em;
-  width: 100%;
-  min-height: 2.25em;
-  background-color: #fff;
-  border: 2px solid #95a5a6;
-}
-
-/* line 315, main.scss */
-textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus {
-  border: 2px solid #15bded;
-  outline: none;
-}
-
-/* line 321, main.scss */
-input::-webkit-input-placeholder {
-  color: #bdc3c7;
-}
-
-/* line 324, main.scss */
-input::-moz-placeholder {
-  color: #bdc3c7;
-}
-
-/* line 327, main.scss */
-input:-moz-placeholder {
-  /* Older versions of Firefox */
-  color: #bdc3c7;
-}
-
-/* line 330, main.scss */
-input:-ms-input-placeholder {
-  color: #bdc3c7;
-}
-
-/* line 334, main.scss */
-textarea::-webkit-input-placeholder {
-  color: #bdc3c7;
-}
-
-/* line 337, main.scss */
-textarea::-moz-placeholder {
-  color: #bdc3c7;
-}
-
-/* line 340, main.scss */
-textarea:-moz-placeholder {
-  /* Older versions of Firefox */
-  color: #bdc3c7;
-}
-
-/* line 343, main.scss */
-textarea:-ms-input-placeholder {
-  color: #bdc3c7;
 }
