--- a/css/main.css
+++ b/css/main.css
@@ -400,26 +400,27 @@
 /* This CSS resource incorporates links to font software which is the valuable copyrighted property of Monotype Imaging and/or its suppliers. You may not attempt to copy, install, redistribute, convert, modify or reverse engineer this font software. Please contact Monotype Imaging with any questions regarding Web Fonts:  http://webfonts.fonts.com */
 /* line 1, _styleguide.scss */
 #color .swatch {
-  padding: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
   display: inline-block;
-  width: inherit;
+  width: 100%;
   color: inherit;
+  padding: .75em;
+  margin-top: .75em;
+  margin-bottom: .75em;
+  height: 150%;
 }
 
-/* line 10, _styleguide.scss */
+/* line 11, _styleguide.scss */
 #color .unit {
   text-align: center;
 }
 
-/* line 14, _styleguide.scss */
+/* line 15, _styleguide.scss */
 #grid .line {
   background-color: #d2f2fc;
   margin-bottom: .75em;
 }
 
-/* line 19, _styleguide.scss */
+/* line 20, _styleguide.scss */
 #grid .unit p {
   margin-top: .75em;
   background-color: #74d8f4;
@@ -724,6 +725,54 @@ code, kbd, pre, samp {
 }
 
 /* line 275, main.scss */
+button {
+  height: 36px;
+  margin-right: 18px;
+  display: inline-block;
+  white-space: nowrap;
+  line-height: 36px;
+  font-size: 14px;
+  padding: 0 18px;
+  cursor: pointer;
+  overflow: hidden;
+  font-weight: bold;
+  text-align: center;
+  font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
+  border: 0 none;
+  border-radius: 5px;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: white;
+  letter-spacing: .02em;
+  background-color: #95a5a6;
+}
+
+/* line 298, main.scss */
+button.buttonPrimary {
+  background-color: #15bded;
+}
+
+/* line 302, main.scss */
+button:disabled {
+  background-color: #ecf0f1;
+  color: #bdc3c7;
+}
+
+/* line 307, main.scss */
+.buttonLink {
+  background-color: none;
+  color: #15bded;
+  background-color: transparent;
+  border-bottom: 2px solid #15bded;
+  border-radius: 0;
+  line-height: 1.11111111111111em;
+  padding: 0;
+  height: 18px;
+  margin: 9px 18px;
+}
+
+/* line 319, main.scss */
 textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
   display: inline-block;
   padding: 0 0.625em;
@@ -736,55 +785,55 @@ textarea, input[type="text"], input[type="password"], input[type="file"], input[
   border: 2px solid #95a5a6;
 }
 
-/* line 287, main.scss */
+/* line 331, main.scss */
 textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus {
   border: 2px solid #15bded;
   outline: none;
 }
 
-/* line 293, main.scss */
+/* line 337, main.scss */
 input::-webkit-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 296, main.scss */
+/* line 340, main.scss */
 input::-moz-placeholder {
   color: #bdc3c7;
 }
 
-/* line 299, main.scss */
+/* line 343, main.scss */
 input:-moz-placeholder {
   /* Older versions of Firefox */
   color: #bdc3c7;
 }
 
-/* line 302, main.scss */
+/* line 346, main.scss */
 input:-ms-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 306, main.scss */
+/* line 350, main.scss */
 textarea::-webkit-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 309, main.scss */
+/* line 353, main.scss */
 textarea::-moz-placeholder {
   color: #bdc3c7;
 }
 
-/* line 312, main.scss */
+/* line 356, main.scss */
 textarea:-moz-placeholder {
   /* Older versions of Firefox */
   color: #bdc3c7;
 }
 
-/* line 315, main.scss */
+/* line 359, main.scss */
 textarea:-ms-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 319, main.scss */
+/* line 363, main.scss */
 #wrap {
   background-color: white;
   margin-left: 11.25em;
@@ -794,14 +843,14 @@ textarea:-ms-input-placeholder {
   position: relative;
 }
 
-/* line 328, main.scss */
+/* line 372, main.scss */
 #content {
   background-color: white;
   padding: 3em 2.5em;
   margin-top: 3.75em;
 }
 
-/* line 335, main.scss */
+/* line 379, main.scss */
 #mainNav {
   position: fixed;
   top: 0;
@@ -813,13 +862,13 @@ textarea:-ms-input-placeholder {
   z-index: 200;
   transition: all .2s ease-in-out;
 }
-/* line 345, main.scss */
+/* line 389, main.scss */
 #mainNav .logo {
   width: 11.25em;
   height: 100%;
   display: inline-block;
 }
-/* line 350, main.scss */
+/* line 394, main.scss */
 #mainNav .logo img {
   position: relative;
   top: .5em;
@@ -827,83 +876,83 @@ textarea:-ms-input-placeholder {
   padding-top: 0.5625em;
   height: 2.25em;
 }
-/* line 359, main.scss */
+/* line 403, main.scss */
 #mainNav .search {
   margin-left: 2.5em;
   position: relative;
 }
-/* line 363, main.scss */
+/* line 407, main.scss */
 #mainNav .search input {
   width: 30%;
   min-width: 22.5em;
   border: 2px solid #a3e5f8;
 }
-/* line 369, main.scss */
+/* line 413, main.scss */
 #mainNav .search input:focus {
   border: 2px solid #0f99c0;
 }
-/* line 373, main.scss */
+/* line 417, main.scss */
 #mainNav .search .inputLink {
   position: absolute;
   right: 2.5em;
   border: none;
   color: #34495e;
 }
-/* line 380, main.scss */
+/* line 424, main.scss */
 #mainNav .search .icon {
   position: absolute;
   right: 0.625em;
 }
-/* line 385, main.scss */
+/* line 429, main.scss */
 #mainNav .search .inputLink, #mainNav .search .icon {
   line-height: 3.75em;
 }
-/* line 389, main.scss */
+/* line 433, main.scss */
 #mainNav .search .inputLink:hover, #mainNav .search .icon:hover {
   opacity: .5;
 }
-/* line 394, main.scss */
+/* line 438, main.scss */
 #mainNav ul {
   display: inline-block;
   float: right;
   margin-right: 2.5em;
 }
-/* line 399, main.scss */
+/* line 443, main.scss */
 #mainNav ul .icon {
   font-size: 0.2em;
   position: relative;
   margin-left: 0.625em;
   bottom: 2px;
 }
-/* line 406, main.scss */
+/* line 450, main.scss */
 #mainNav ul li {
   display: inline-block;
   line-height: 3.75em;
   color: #34495e;
 }
-/* line 412, main.scss */
+/* line 456, main.scss */
 #mainNav ul li a {
   border: none;
   font-weight: bold;
   color: inherit;
   padding: 0 1.25em;
 }
-/* line 420, main.scss */
+/* line 464, main.scss */
 #mainNav ul li:hover {
   background-color: #74d8f4;
 }
 
-/* line 429, main.scss */
+/* line 473, main.scss */
 #mainNav.slideUp {
   top: -3.75em;
 }
 
-/* line 433, main.scss */
+/* line 477, main.scss */
 #mainNav.slideDown {
   top: 0;
 }
 
-/* line 437, main.scss */
+/* line 481, main.scss */
 #sideNav {
   overflow-y: auto;
   background-color: #ecf0f1;
@@ -915,34 +964,34 @@ textarea:-ms-input-placeholder {
   padding-top: 3.75em;
   z-index: 100;
 }
-/* line 448, main.scss */
+/* line 492, main.scss */
 #sideNav li {
   font-size: 1em;
   line-height: 3.75em;
   color: #95a5a6;
 }
-/* line 453, main.scss */
+/* line 497, main.scss */
 #sideNav li a {
   padding: 0 1.25em;
   border: none;
   font-weight: bold;
   color: inherit;
 }
-/* line 461, main.scss */
+/* line 505, main.scss */
 #sideNav li.selected {
   color: #34495e;
 }
-/* line 465, main.scss */
+/* line 509, main.scss */
 #sideNav li:hover {
   background-color: rgba(189, 195, 199, 0.3);
   color: #34495e;
 }
-/* line 470, main.scss */
+/* line 514, main.scss */
 #sideNav .icon {
   color: inherit;
   padding-left: 1.25em;
 }
-/* line 475, main.scss */
+/* line 519, main.scss */
 #sideNav .icon + a {
   padding-left: 0.625em;
 }
