--- a/css/main.scss
+++ b/css/main.scss
@@ -270,7 +270,51 @@ code, kbd, pre, samp {
 	border-radius: 4px;
 }
 
-// Input
+// Forms
+
+button {
+	height: 36px;
+	margin-right: 18px;
+	display: inline-block;
+	white-space: nowrap;
+	line-height: 36px;
+	font-size: 14px;
+	padding: 0 18px;
+	cursor: pointer;
+	overflow: hidden;
+	font-weight: bold;
+	text-align: center;
+	font-family: $bodyFontStack;
+	border: 0 none;
+	border-radius: 5px;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	color: white;
+	letter-spacing: .02em;
+	background-color: $gray3;
+}
+
+button.buttonPrimary {
+	background-color: $blueLight;
+}
+
+button:disabled {
+	background-color: $gray1;
+	color: $gray2;
+}
+
+.buttonLink {
+	background-color: none;
+	color: $blueLight;
+	background-color: transparent;
+	border-bottom: 2px solid $blueLight;
+	border-radius: 0;
+	line-height: 1.11111111111111em;
+	padding: 0;
+	height: 18px;
+	margin: 9px 18px;
+}
 
 textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
 	display: inline-block;
