--- a/css/_styleguide.scss
+++ b/css/_styleguide.scss
@@ -1,10 +1,11 @@
 #color .swatch {
-	padding: 10px;
-	margin-right: 10px;
-	margin-bottom: 10px;
 	display: inline-block;
-	width: inherit;
+	width: 100%;
 	color: inherit;
+	padding: .75em;
+	margin-top: .75em;
+	margin-bottom: .75em;
+	height: 150%;
 }
 
 #color .unit {
