--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -40,18 +40,89 @@
 	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
-	line-height: 1;
-
+	font-size: 20px;
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.panjiva-icon-building-lg:before {
-	content: "\e600";
+.panjiva-icon-right-double:before {
+	content: "\e609";
+}
+.panjiva-icon-left-double:before {
+	content: "\e60a";
+}
+.panjiva-icon-left-circle:before {
+	content: "\e60b";
+}
+.panjiva-icon-left:before {
+	content: "\e60c";
+}
+.panjiva-icon-right-circle:before {
+	content: "\e60d";
+}
+.panjiva-icon-right:before {
+	content: "\e60e";
+}
+.panjiva-icon-down-circle:before {
+	content: "\e60f";
+}
+.panjiva-icon-down:before {
+	content: "\e610";
+}
+.panjiva-icon-up-circle:before {
+	content: "\e611";
+}
+.panjiva-icon-up:before {
+	content: "\e612";
+}
+.panjiva-icon-x-circle:before {
+	content: "\e613";
+}
+.panjiva-icon-key:before {
+	content: "\e61e";
+}
+.panjiva-icon-unlock:before {
+	content: "\e61f";
+}
+.panjiva-icon-user:before {
+	content: "\e629";
+}
+.panjiva-icon-moon:before {
+	content: "\e62a";
+}
+.panjiva-icon-location:before {
+	content: "\e635";
+}
+.panjiva-icon-search:before {
+	content: "\e636";
+}
+.panjiva-icon-microphone-no:before {
+	content: "\e641";
+}
+.panjiva-icon-microphone:before {
+	content: "\e642";
+}
+.panjiva-icon-home:before {
+	content: "\e64e";
+}
+.panjiva-icon-mail:before {
+	content: "\e64d";
+}
+.panjiva-icon-upload:before {
+	content: "\e64f";
+}
+.panjiva-icon-shipments-lg:before {
+	content: "\e606";
 }
 .panjiva-icon-contact-lg:before {
 	content: "\e601";
+}
+.panjiva-icon-mail-lg:before {
+	content: "\e604";
+}
+.panjiva-icon-factory-lg:before {
+	content: "\e607";
 }
 .panjiva-icon-tools-lg:before {
 	content: "\e602";
@@ -59,204 +130,162 @@
 .panjiva-icon-search-lg:before {
 	content: "\e603";
 }
-.panjiva-icon-mail-lg:before {
-	content: "\e604";
-}
 .panjiva-icon-company-search-lg:before {
 	content: "\e605";
 }
-.panjiva-icon-mail:before {
-	content: "\e608";
+.panjiva-icon-building-lg:before {
+	content: "\e600";
 }
-.panjiva-icon-location:before {
-	content: "\e609";
+.panjiva-icon-bank:before {
+	content: "\e64b";
 }
-.panjiva-icon-link:before {
-	content: "\e60a";
-}
-.panjiva-icon-lightbulb:before {
-	content: "\e60b";
-}
-.panjiva-icon-left-double:before {
-	content: "\e60d";
-}
-.panjiva-icon-compose:before {
-	content: "\e615";
-}
-.panjiva-icon-down:before {
-	content: "\e617";
-}
-.panjiva-icon-exclamation:before {
-	content: "\e61a";
-}
-.panjiva-icon-right-double:before {
-	content: "\e61b";
-}
-.panjiva-icon-globe:before {
-	content: "\e61c";
-}
-.panjiva-icon-gift:before {
-	content: "\e61e";
-}
-.panjiva-icon-right-circle:before {
-	content: "\e621";
-}
-.panjiva-icon-plus-circle:before {
-	content: "\e62a";
-}
-.panjiva-icon-x-circle:before {
-	content: "\e62b";
-}
-.panjiva-icon-up-circle:before {
-	content: "\e62c";
-}
-.panjiva-icon-left-circle:before {
-	content: "\e62d";
-}
-.panjiva-icon-down-circle-2:before {
-	content: "\e62e";
+.panjiva-icon-web:before {
+	content: "\e64a";
 }
 .panjiva-icon-folder:before {
-	content: "\e630";
+	content: "\e649";
 }
 .panjiva-icon-comment:before {
-	content: "\e632";
-}
-.panjiva-icon-print:before {
-	content: "\e633";
-}
-.panjiva-icon-zoom:before {
-	content: "\e634";
-}
-.panjiva-icon-paperclip:before {
-	content: "\e635";
-}
-.panjiva-icon-star:before {
-	content: "\e636";
-}
-.panjiva-icon-question-mark:before {
-	content: "\e637";
-}
-.panjiva-icon-link-4:before {
-	content: "\e638";
-}
-.panjiva-icon-user:before {
-	content: "\e639";
-}
-.panjiva-icon-call:before {
-	content: "\e62f";
-}
-.panjiva-icon-x:before {
-	content: "\e627";
-}
-.panjiva-icon-up:before {
-	content: "\e628";
-}
-.panjiva-icon-right:before {
-	content: "\e629";
-}
-.panjiva-icon-left:before {
-	content: "\e60e";
-}
-.panjiva-icon-info:before {
-	content: "\e60f";
-}
-.panjiva-icon-id:before {
-	content: "\e610";
-}
-.panjiva-icon-home:before {
-	content: "\e611";
-}
-.panjiva-icon-heart:before {
-	content: "\e612";
+	content: "\e648";
 }
 .panjiva-icon-graph:before {
-	content: "\e61d";
+	content: "\e647";
 }
-.panjiva-icon-check:before {
-	content: "\e620";
-}
-.panjiva-icon-calendar:before {
-	content: "\e623";
-}
-.panjiva-icon-anchor:before {
-	content: "\e624";
-}
-.panjiva-icon-factory-lg:before {
-	content: "\e607";
-}
-.panjiva-icon-shipments-lg:before {
-	content: "\e606";
-}
-.panjiva-icon-group:before {
-	content: "\e613";
-}
-.panjiva-icon-building:before {
-	content: "\e625";
-}
-.panjiva-icon-check-circle:before {
-	content: "\e61f";
-}
-.panjiva-icon-settings:before {
-	content: "\e626";
-}
-.panjiva-icon-download:before {
-	content: "\e618";
-}
-.panjiva-icon-contacts:before {
-	content: "\e616";
-}
-.panjiva-icon-clipboard:before {
-	content: "\e614";
-}
-.panjiva-icon-plus:before {
-	content: "\e60c";
-}
-.panjiva-icon-shirt:before {
-	content: "\e619";
-}
-.panjiva-icon-moon:before {
-	content: "\e622";
-}
-.panjiva-icon-umbrella:before {
-	content: "\e63a";
-}
-.panjiva-icon-add-user:before {
-	content: "\e63b";
-}
-.panjiva-icon-megaphone:before {
-	content: "\e63c";
-}
-.panjiva-icon-photo:before {
-	content: "\e63d";
-}
-.panjiva-icon-minimize:before {
-	content: "\e63e";
-}
-.panjiva-icon-refresh:before {
-	content: "\e63f";
-}
-.panjiva-icon-cloud-download:before {
-	content: "\e641";
-}
-.panjiva-icon-upload:before {
-	content: "\e642";
-}
-.panjiva-icon-microphone:before {
-	content: "\e643";
-}
-.panjiva-icon-microphone-no:before {
-	content: "\e644";
-}
-.panjiva-icon-maximize:before {
-	content: "\e645";
-}
-.panjiva-icon-sun:before {
-	content: "\e631";
-}
-.panjiva-icon-briefcase:before {
+.panjiva-icon-print:before {
 	content: "\e646";
 }
+.panjiva-icon-clipboard:before {
+	content: "\e645";
+}
+.panjiva-icon-paper:before {
+	content: "\e644";
+}
+.panjiva-icon-photo:before {
+	content: "\e643";
+}
+.panjiva-icon-calling:before {
+	content: "\e63f";
+}
+.panjiva-icon-megaphone:before {
+	content: "\e63e";
+}
+.panjiva-icon-contacts:before {
+	content: "\e63d";
+}
+.panjiva-icon-id:before {
+	content: "\e63c";
+}
+.panjiva-icon-calendar:before {
+	content: "\e63b";
+}
+.panjiva-icon-clock:before {
+	content: "\e63a";
+}
+.panjiva-icon-compose:before {
+	content: "\e639";
+}
+.panjiva-icon-settings:before {
+	content: "\e638";
+}
+.panjiva-icon-lightbulb:before {
+	content: "\e637";
+}
+.panjiva-icon-star:before {
+	content: "\e633";
+}
+.panjiva-icon-link:before {
+	content: "\e632";
+}
+.panjiva-icon-heart:before {
+	content: "\e631";
+}
+.panjiva-icon-gift:before {
+	content: "\e630";
+}
+.panjiva-icon-shirt:before {
+	content: "\e62f";
+}
+.panjiva-icon-trash:before {
+	content: "\e62e";
+}
+.panjiva-icon-anchor:before {
+	content: "\e62d";
+}
+.panjiva-icon-umbrella:before {
+	content: "\e62c";
+}
+.panjiva-icon-sun:before {
+	content: "\e62b";
+}
+.panjiva-icon-group:before {
+	content: "\e628";
+}
+.panjiva-icon-cart:before {
+	content: "\e627";
+}
+.panjiva-icon-database:before {
+	content: "\e626";
+}
+.panjiva-icon-briefcase:before {
+	content: "\e625";
+}
+.panjiva-icon-flag:before {
+	content: "\e624";
+}
+.panjiva-icon-undo:before {
+	content: "\e623";
+}
 .panjiva-icon-cloud-upload:before {
+	content: "\e622";
+}
+.panjiva-icon-cloud-download:before {
+	content: "\e621";
+}
+.panjiva-icon-lock:before {
+	content: "\e620";
+}
+.panjiva-icon-exclamation:before {
+	content: "\e61c";
+}
+.panjiva-icon-info:before {
+	content: "\e61b";
+}
+.panjiva-icon-minimize:before {
+	content: "\e61a";
+}
+.panjiva-icon-maximize:before {
+	content: "\e619";
+}
+.panjiva-icon-add:before {
+	content: "\e618";
+}
+.panjiva-icon-add-circle:before {
+	content: "\e617";
+}
+.panjiva-icon-check:before {
+	content: "\e616";
+}
+.panjiva-icon-check-circle:before {
+	content: "\e615";
+}
+.panjiva-icon-x:before {
+	content: "\e614";
+}
+.panjiva-icon-question:before {
+	content: "\e61d";
+}
+.panjiva-icon-add-user:before {
+	content: "\e608";
+}
+.panjiva-icon-paperclip:before {
+	content: "\e634";
+}
+.panjiva-icon-call:before {
 	content: "\e640";
+}
+.panjiva-icon-building:before {
+	content: "\e64c";
+}
+.panjiva-icon-download:before {
+	content: "\e650";
 }
