--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -44,6 +44,7 @@
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
 
 .panjiva-icon-right-double:before {
 	content: "\e609";
