settings page set up

--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -40,7 +40,7 @@
 	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
-	font-size: 1.25em;
+	font-size: 1.25em;;
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
